--- a/pom.xml
+++ b/pom.xml
@@ -1,240 +1,241 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.javacodegeeks.snippets.enterprise</groupId>
-	<artifactId>springexample</artifactId>
-	<packaging>war</packaging>
-	<version>0.0.1</version>
-	<name>springexample Maven Webapp</name>
-	<url>http://maven.apache.org</url>
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.javacodegeeks.snippets.enterprise</groupId>
+  <artifactId>springexample</artifactId>
+  <packaging>war</packaging>
+  <version>0.0.1</version>
+  <name>springexample Maven Webapp</name>
+  <url>http://maven.apache.org</url>
 
-	<build>
-		<finalName>springexample</finalName>
+  <build>
+    <finalName>springexample</finalName>
 
-		<pluginManagement>
-			<plugins>
-				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>${maven-compiler.version}</version>
-					<configuration>
-						<annotationProcessorPaths>
-							<path>
-								<groupId>org.mapstruct</groupId>
-								<artifactId>mapstruct-processor</artifactId>
-								<version>${mapstruct.version}</version>
-							</path>
-						</annotationProcessorPaths>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
+    <pluginManagement>
+      <plugins>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${maven-compiler.version}</version>
+          <configuration>
+            <annotationProcessorPaths>
+              <path>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-processor</artifactId>
+                <version>${mapstruct.version}</version>
+              </path>
+            </annotationProcessorPaths>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
 
-		<resources>
-			<resource>
-				<directory>${project.resourcesdir}</directory>
-				<excludes>
-					<exclude>**/*.java</exclude>
-				</excludes>
-				<filtering>false</filtering>
-			</resource>
-		</resources>
-	</build>
+    <resources>
+      <resource>
+        <directory>${project.resourcesdir}</directory>
+        <excludes>
+          <exclude>**/*.java</exclude>
+        </excludes>
+        <filtering>false</filtering>
+      </resource>
+    </resources>
+  </build>
 
-	<repositories>
-		<repository>
-			<id>primefaces-repository</id>
-			<name>PrimeFaces Repository</name>
-			<url>http://repository.primefaces.org/</url>
-		</repository>
-	</repositories>
+  <repositories>
+    <repository>
+      <id>primefaces-repository</id>
+      <name>PrimeFaces Repository</name>
+      <url>http://repository.primefaces.org/</url>
+    </repository>
+  </repositories>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.primefaces</groupId>
-			<artifactId>primefaces</artifactId>
-			<version>${primefaces.version}</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.primefaces.extensions/primefaces-extensions -->
-		<dependency>
-			<groupId>org.primefaces.extensions</groupId>
-			<artifactId>primefaces-extensions</artifactId>
-			<version>${primefaces-extensions.version}</version>
-		</dependency>
+  <dependencies>
+    <dependency>
+      <groupId>org.primefaces</groupId>
+      <artifactId>primefaces</artifactId>
+      <version>${primefaces.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.primefaces.extensions/primefaces-extensions -->
+    <dependency>
+      <groupId>org.primefaces.extensions</groupId>
+      <artifactId>primefaces-extensions</artifactId>
+      <version>${primefaces-extensions.version}</version>
+    </dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct-jdk8 -->
-		<dependency>
-			<groupId>org.mapstruct</groupId>
-			<artifactId>mapstruct-jdk8</artifactId>
-			<version>${mapstruct.version}</version>
-		</dependency>
+    <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct-jdk8 -->
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct-jdk8</artifactId>
+      <version>${mapstruct.version}</version>
+    </dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-api -->
-		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-api</artifactId>
-			<version>${jsf.version}</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-impl -->
-		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-impl</artifactId>
-			<version>${jsf.version}</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>${postgresql.version}</version>
-		</dependency>
+    <!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-api -->
+    <dependency>
+      <groupId>com.sun.faces</groupId>
+      <artifactId>jsf-api</artifactId>
+      <version>${jsf.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-impl -->
+    <dependency>
+      <groupId>com.sun.faces</groupId>
+      <artifactId>jsf-impl</artifactId>
+      <version>${jsf.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>${postgresql.version}</version>
+    </dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider -->
-		<dependency>
-			<groupId>com.fasterxml.jackson.jaxrs</groupId>
-			<artifactId>jackson-jaxrs-json-provider</artifactId>
-			<version>${jackson-jaxrs.version}</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>${log4j.version}</version>
-		</dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider
+    <dependency>
+      <groupId>com.fasterxml.jackson.jaxrs</groupId>
+      <artifactId>jackson-jaxrs-json-provider</artifactId>
+      <version>${jackson-jaxrs.version}</version>
+    </dependency>
+    -->
+    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>${log4j.version}</version>
+    </dependency>
 
 
-		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
-		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
-			<version>${validation-api.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>${javax.servlet-api.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/javax.transaction/javax.transaction-api -->
-		<dependency>
-			<groupId>javax.transaction</groupId>
-			<artifactId>javax.transaction-api</artifactId>
-			<version>${javax.transaction-api.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
+    <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>${validation-api.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>${javax.servlet-api.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.transaction/javax.transaction-api
+    <dependency>
+      <groupId>javax.transaction</groupId>
+      <artifactId>javax.transaction-api</artifactId>
+      <version>${javax.transaction-api.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    -->
+    
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-tx</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-orm</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+  
+    <!--
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    -->
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>${hibernate.version}</version>
+    </dependency>
+    
+    <!--
+    <dependency>
+      <groupId>com.atomikos</groupId>
+      <artifactId>transactions-jta</artifactId>
+      <version>${atomikos.version}</version>
+    </dependency>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
+    <dependency>
+      <groupId>com.atomikos</groupId>
+      <artifactId>transactions-jdbc</artifactId>
+      <version>${atomikos.version}</version>
+    </dependency>
 
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>${hibernate.version}</version>
-		</dependency>
+    <dependency>
+      <groupId>com.atomikos</groupId>
+      <artifactId>transactions-hibernate3</artifactId>
+      <version>${atomikos.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>hibernate</artifactId>
+          <groupId>org.hibernate</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    -->
 
-		<dependency>
-			<groupId>com.atomikos</groupId>
-			<artifactId>transactions-jta</artifactId>
-			<version>${atomikos.version}</version>
-		</dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-dbcp2</artifactId>
+        <version>2.5.0</version>
+    </dependency>
+    
+  </dependencies>
 
-		<dependency>
-			<groupId>com.atomikos</groupId>
-			<artifactId>transactions-jdbc</artifactId>
-			<version>${atomikos.version}</version>
-		</dependency>
+  <properties>
+    <!-- propriedades default do Maven -->
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<dependency>
-			<groupId>com.atomikos</groupId>
-			<artifactId>transactions-hibernate3</artifactId>
-			<version>${atomikos.version}</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>hibernate</artifactId>
-					<groupId>org.hibernate</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
+    <!-- propriedades do projeto 
+    <project.resourcesdir>${project.basedir}/src/main/resources</project.resourcesdir>
+    -->
 
-		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-dbcp -->
-		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-dbcp</artifactId>
-			<version>${tomcat-dbcp.version}</version>
-		</dependency>
-	</dependencies>
+    <!-- versoes das dependencias -->
+    <apache.httpclient.version>4.5.5</apache.httpclient.version>
+    <log4j.version>2.11.0</log4j.version>
+    <jsf.version>2.2.14</jsf.version>
+    <javax.transaction-api.version>1.3</javax.transaction-api.version>
+    <javax.servlet-api.version>4.0.0</javax.servlet-api.version>
+    <validation-api.version>2.0.1.Final</validation-api.version>
+    <tomcat-dbcp.version>8.5.23</tomcat-dbcp.version>
+    <weld-servlet.version>2.4.7.Final</weld-servlet.version>
+    <mapstruct.version>1.1.0.Final</mapstruct.version>
+    <primefaces.version>6.2</primefaces.version>
+    <primefaces-extensions.version>6.2.9</primefaces-extensions.version>
+    <primefaces-theme.version>1.0.10</primefaces-theme.version>
+    <postgresql.version>42.2.1</postgresql.version>
+    <spring.version>5.1.4.RELEASE</spring.version>
+    <atomikos.version>4.0.6</atomikos.version>
+    <hibernate.version>5.2.2.Final</hibernate.version>
+    <jackson-jaxrs.version>2.9.2</jackson-jaxrs.version>
+    <github-api.version>1.92</github-api.version>
+    <junit.version>4.12</junit.version>
 
-	<properties>
-		<!-- propriedades default do Maven -->
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-		<!-- propriedades do projeto -->
-		<project.resourcesdir>${project.basedir}/src/main/resources</project.resourcesdir>
-
-		<!-- versoes das dependencias -->
-		<apache.httpclient.version>4.5.5</apache.httpclient.version>
-		<log4j.version>2.11.0</log4j.version>
-		<jsf.version>2.2.14</jsf.version>
-		<javax.transaction-api.version>1.3</javax.transaction-api.version>
-		<javax.servlet-api.version>4.0.0</javax.servlet-api.version>
-		<validation-api.version>2.0.1.Final</validation-api.version>
-		<tomcat-dbcp.version>8.5.23</tomcat-dbcp.version>
-		<weld-servlet.version>2.4.7.Final</weld-servlet.version>
-		<mapstruct.version>1.1.0.Final</mapstruct.version>
-		<primefaces.version>6.2</primefaces.version>
-		<primefaces-extensions.version>6.2.9</primefaces-extensions.version>
-		<primefaces-theme.version>1.0.10</primefaces-theme.version>
-		<postgresql.version>42.2.1</postgresql.version>
-		<apache-cxf-client.version>3.2.2</apache-cxf-client.version>
-		<spring.version>5.1.4.RELEASE</spring.version>
-		<atomikos.version>4.0.6</atomikos.version>
-		<hibernate.version>5.2.2.Final</hibernate.version>
-		<jackson-jaxrs.version>2.9.2</jackson-jaxrs.version>
-		<github-api.version>1.92</github-api.version>
-		<junit.version>4.12</junit.version>
-		<webapp-runner.version>8.5.23.0</webapp-runner.version>
-
-		<!-- versoes dos plugins -->
-		<maven-compiler.version>3.5.1</maven-compiler.version>
-		<maven-dependency.version>3.0.2</maven-dependency.version>
-	</properties>
+    <!-- versoes dos plugins -->
+    <maven-compiler.version>3.5.1</maven-compiler.version>
+    <maven-dependency.version>3.0.2</maven-dependency.version>
+  </properties>
 
 </project>
